fix: change the jump of a route

--- a/src/components/Loading/index.less
+++ b/src/components/Loading/index.less
@@ -5,7 +5,7 @@
   width: 100vw;
   height: 100vh;
   background-color: var(--loading-layer-bg);
-  z-index: 99999;
+  z-index: 9999;
   display: flex;
   align-items: center;
   justify-content: center;
